Revert "[Java] Run partition tests with 5 nodes + add support for asymmetric network partitions."
This reverts commit b578727135c5bf0956a08645b19415d104c365bd.